MyDemoOrg/force-app/main/default/objects/ATestObj__c/ATestObj__c.object-meta.xml
<CustomObject>
    <label>ATestObj</label>
    <nameField>
        <label>ATestObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ATestObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>