MyDemoOrg/force-app/main/default/objects/ATestObj__c/fields/PaymentGatewayID__c.field-meta.xml
<CustomField>
    <fullName>PaymentGatewayID__c</fullName>
    <displayFormat>MPG-{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>Payment Gateway ID</label>
    <type>AutoNumber</type>
</CustomField>