MyDemoOrg/force-app/main/default/objects/ATestObj__c/fields/Selected__c.field-meta.xml
<CustomField>
    <fullName>Selected__c</fullName>
    <label>Selected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>